test/libsolidity/syntaxTests/iele/library.sol
library test {
	function f() external;
}
// ----
// TypeError: (16-38): External library functions without an implementation are not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
